[package]
name = "f8s"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[features]
default = ["k8s-openapi/v1_20"]

[dependencies]
color-eyre = "0.5"
eyre = "0.6"
log = "0.4"
# pretty_env_logger = "0.4"
thiserror = "1"
tracing-subscriber = "0.2"

tokio = { version = "1", features = ["full"] }

k8s-openapi = "0.11"
kube = { version = "0.52", default-features = false, features = ["rustls-tls"] }

libc = "0.2"
polyfuse = "0.4"
