[package]
name = "f8s"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"

[features]
default = ["k8s-openapi/v1_20", "polyfuse-undocumented"]
polyfuse-undocumented = []

[dependencies]
bimap = "0.6"
color-eyre = "0.5"
eyre = "0.6"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
k8s-openapi = "0.11"
kube = "0.52"
libc = "0.2"
log = "0.4"
polyfuse = "0.4"
pretty_env_logger = "0.4"
serde_yaml = "0.8"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

# https://github.com/ctz/hyper-rustls/issues/56
# kube = { version = "0.52", default-features = false, features = ["rustls-tls"] }
